rust/crates/turbotokens-cli-parser/src/snapshots/turbotokens_cli_parser__tests__root_help.snap
---
source: crates/turbotokens-cli-parser/src/tests.rs
expression: help_text()
---
USAGE:
  turbotokens [daily] <OPTIONS>
  turbotokens <COMMANDS>

COMMANDS:
  daily                      Show all detected coding (agent) CLI usage grouped by date
  monthly                    Show all detected coding (agent) CLI usage grouped by month
  weekly                     Show all detected coding (agent) CLI usage grouped by week
  session                    Show all detected coding (agent) CLI usage grouped by session
  blocks                     Show usage report grouped by session billing blocks
  statusline                 Display compact status line for Claude Code hooks with hybrid time+file caching (Beta)
  live                       Follow Claude Code, Codex, or Grok Build usage in a live dashboard
  stream                     Stream Claude Code, Codex, or Grok Build token usage as newline-delimited JSON
  daemon                     Run a resident index daemon for near-instant reports
  doctor                     Diagnose data directories, cache health, and pricing setup
  limits                     Show plan-limit / quota usage for subscription agents (Claude, Codex)
  import                     Render a ccusage JSON export (ccusage daily/monthly/session --json) as a turbotokens report
  heatmap                    Show a GitHub-style token usage heatmap for the last year
  wrapped                    Show a year-in-review summary of your agent usage
  completions                Print shell completion scripts
  claude                     Show Claude Code usage commands
  codex                      Show Codex token usage commands
  opencode                   Show OpenCode token usage commands
  amp                        Show Amp token usage commands
  droid                      Show Droid usage commands
  codebuff                   Show Codebuff usage commands
  hermes                     Show Hermes usage commands
  pi                         Show pi-agent usage commands
  goose                      Show Goose usage commands
  grok                       Show Grok Build usage commands
  kilo                       Show Kilo usage commands
  copilot                    Show GitHub Copilot CLI usage commands
  gemini                     Show Gemini CLI usage commands
  antigravity                Show Antigravity usage commands
  kimi                       Show Kimi usage commands
  qwen                       Show Qwen usage commands
  openclaw                   Show OpenClaw usage commands
  zcode                      Show ZCode usage commands

For more info, run any command with the `--help` flag:
  turbotokens daily --help
  turbotokens monthly --help
  turbotokens weekly --help
  turbotokens session --help
  turbotokens blocks --help
  turbotokens statusline --help
  turbotokens live --help
  turbotokens stream --help
  turbotokens daemon --help
  turbotokens doctor --help
  turbotokens limits --help
  turbotokens import --help
  turbotokens heatmap --help
  turbotokens wrapped --help
  turbotokens completions --help
  turbotokens claude --help
  turbotokens codex --help
  turbotokens opencode --help
  turbotokens amp --help
  turbotokens droid --help
  turbotokens codebuff --help
  turbotokens hermes --help
  turbotokens pi --help
  turbotokens goose --help
  turbotokens grok --help
  turbotokens kilo --help
  turbotokens copilot --help
  turbotokens gemini --help
  turbotokens antigravity --help
  turbotokens kimi --help
  turbotokens qwen --help
  turbotokens openclaw --help
  turbotokens zcode --help

OPTIONS:
  -j, --json                           Output in JSON format (default: false)
  -s, --since <since>                  Filter from date (YYYY-MM-DD or YYYYMMDD)
  -u, --until <until>                  Filter until date (inclusive)
  -z, --timezone <timezone>            Timezone for date grouping (IANA)
  --all                                Accepted for compatibility; all detected supported agents are included by default (default: false)
  --sections <sections>                Emit multiple unified report sections from one load (daily, weekly, monthly, session)
  --by-agent                           Include per-agent JSON breakdowns in unified report rows (default: false)
  -O, --offline                        Use cached pricing data where supported (default: false)
  --no-offline                         Negatable of -O, --offline
  --compact                            Force compact table layout for narrow terminals (default: false)
  --no-cost                            Hide cost information in table and JSON output (default: false)
  --color                              Enable colored output. FORCE_COLOR=1 has the same effect. (default: auto)
  --no-color                           Disable colored output. NO_COLOR=1 has the same effect. (default: auto)
  --config <config>                    Path to configuration file (default: auto-discovery)
  -h, --help                           Display this help message
  -v, --version                        Display this version
