rust/crates/turbotokens-cli-parser/src/snapshots/turbotokens_cli_parser__tests__stream_help.snap
---
source: crates/turbotokens-cli-parser/src/tests.rs
expression: "help_text_for_args(&[\"turbotokens\".to_string(), \"stream\".to_string()])"
---
Stream Claude Code, Codex, or Grok Build token usage as newline-delimited JSON. Each line is one usage event. This is `turbotokens live --json`.

USAGE:
  turbotokens stream <OPTIONS>

OPTIONS:
  -s, --since <since>                  Filter from date (YYYYMMDD format)
  -u, --until <until>                  Filter until date (YYYYMMDD format)
  -j, --json                           Output in JSON format (default: false)
  -m, --mode [mode]                    Cost calculation mode (default: auto, choices: auto | calculate | display)
  -d, --debug                          Show pricing mismatch information for debugging (default: false)
  --debug-samples [debug-samples]      Number of sample discrepancies to show in debug output (default: 5)
  -o, --order [order]                  Sort order (default: asc, choices: desc | asc)
  -b, --breakdown                      Show per-model cost breakdown (default: false)
  -O, --offline                        Use cached pricing data for Claude models instead of fetching from API (default: false)
  --no-offline                         Negatable of -O, --offline
  --single-thread                      Disable parallel JSONL file loading (default: false)
  --color                              Enable colored output. FORCE_COLOR=1 has the same effect. (default: auto)
  --no-color                           Disable colored output. NO_COLOR=1 has the same effect. (default: auto)
  -z, --timezone <timezone>            Timezone for date grouping (e.g., UTC, America/New_York, Asia/Tokyo) (default: system timezone)
  --config <config>                    Path to configuration file (default: auto-discovery)
  --compact                            Force compact mode for narrow displays (better for screenshots) (default: false)
  -h, --help                           Display this help message
  -v, --version                        Display this version
  --interval <interval>                Poll interval in milliseconds (default: 100)
  --agent <agent>                      Agent to watch (choices: claude | codex | grok) (default: claude)
  --alert-cost <alert-cost>            Alert when today's cost exceeds this many USD (requires --webhook)
  --alert-tokens <alert-tokens>        Alert when today's tokens exceed this count (requires --webhook)
  --webhook <webhook>                  URL to POST alert events to as JSON
  --serve <serve>                      Serve Prometheus text metrics at this address (GET /metrics), e.g. 127.0.0.1:9090
